--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,2 +1,2 @@
-<%= render 'shared/show', box_class: 'info', object: @registration %>
+<%= render 'shared/show', box_class: 'info', show_new: false, object: @registration %>
 
