--- a/app/views/employments/index.html.erb
+++ b/app/views/employments/index.html.erb
@@ -1,35 +1,16 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Employments</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Admission date</th>
-      <th>Resignation date</th>
-      <th>Base salary</th>
-      <th>Occupation</th>
-      <th>Person</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @employments.each do |employment| %>
-      <tr>
-        <td><%= employment.admission_date %></td>
-        <td><%= employment.resignation_date %></td>
-        <td><%= employment.base_salary %></td>
-        <td><%= employment.place_id %></td>
-        <td><%= employment.person_id %></td>
-        <td><%= link_to 'Show', employment %></td>
-        <td><%= link_to 'Edit', edit_employment_path(employment) %></td>
-        <td><%= link_to 'Destroy', employment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Employment', new_employment_path %>
+<%= render 'shared/card_list',
+list: @employments,
+order: 'person.name',
+sort_all: true,
+show_new: false,
+card_class: 'info',
+table_class: 'bootstrap-table-mobile',
+show_columns: [
+  'id',
+  'person.name',
+  'occupation.name',
+  'base_salary',
+  'admission_date',
+  'resignation_date'
+]
+%>
